# yet-another-raytracer

./: .gitignore  yet-another-raytracer.sln  yet-another-raytracer.sln.DotSettings
_scenes/_benchmarks/: cornell-box-rgb-hq-geometry-light.test  cornell-box-rgb-lq.test  cornell-box-rgb-ultra-geometry-light.test  cornell-box-rgb-vlq-geometry-light-debug.test  cornell-box-rgb-vlq-geometry-light.test  cornell-box-rgb-vlq.test  two-spheres-integration-test.test
_scenes/hw3-submissionscenes/: scene2.test  scene4-diffuse.test  scene6-original.test  scene7.test  timings-glm.txt
_scenes/misc/: cornell-box-rgb-vhq.test  open-corridor.test  scene6.test
math-test/: Paths.Debug.user.props  Paths.Debug.x64.user.props  Paths.Release.user.props  math-test.cpp  math-test.vcxproj  math-test.vcxproj.filters  stdafx.cpp
yet-another-raytracer/: Accelerator.h  Attenuation.h  Bitmap8Texture.cpp  Bitmap8Texture.h  BitmapTexture.cpp  BitmapTexture.h  BlinnMaterial.cpp  BlinnMaterial.h  BoundingBox.h  BoundingBox.hpp  BoundingBoxHit.h  BucketRenderer.cpp  BucketRenderer.h  CMakeLists.txt  CMakeSettings.json  Camera.h  CameraCommandFactory.cpp  CameraCommandFactory.h  CameraCommandProcessor.cpp  CameraCommandProcessor.h  CommandFactory.h  CommandProcessor.h  Constants.h  DielectricMaterial.cpp  DielectricMaterial.h  DirectionalLightSource.cpp  DirectionalLightSource.h  Distribution.h  Film.cpp  Film.h  FlatTriangleObject.cpp  FlatTriangleObject.h  Flux.h  GeometryLightSource.cpp  GeometryLightSource.h  GeometryObject.h  Hashing.h  Hit.h  IBucketSequencer.h  IExecutor.h  (+151 more)
yet-another-raytracer/accelerators/: Accelerator.h
yet-another-raytracer/accelerators/kd_tree/: KDTraverseFrame.h  KDTreeAccelerator.cpp  KDTreeAccelerator.h  KDTreeMarcher.cpp  KDTreeMarcher.h  KDTreeNode.cpp  KDTreeNode.h
yet-another-raytracer/accelerators/null/: NullAccelerator.cpp  NullAccelerator.h  NullMarcher.cpp  NullMarcher.h
yet-another-raytracer/applications/: ConsoleApplication.h  IApplication.h  NanaApplication.cpp  NanaApplication.h
yet-another-raytracer/cloudscape/: atmosphere_math.h  cloudscape_integrator.h  cloudscape_scene.h  prepared_scene.h  presets.h  spectral_color.h
yet-another-raytracer/color/: cas_colorspace.h  color_functions.hpp
yet-another-raytracer/hashing/: hashing.h  pcg_hash.h  xxhash32.h
yet-another-raytracer/integrators/: MonteCarloPathIntegrator.h  RayIntegrator.h
yet-another-raytracer/lights/: DirectionalLightSource.cpp  DirectionalLightSource.h  GeometryLightSource.cpp  GeometryLightSource.h  LightSource.h  LightingContext.h  PointLightSource.cpp  PointLightSource.h  SkyLightSource.cpp  SkyLightSource.h  SunLightSource.h
yet-another-raytracer/materials/: BlinnMaterial.cpp  BlinnMaterial.h  DielectricMaterial.cpp  DielectricMaterial.h  Material.h  NullMaterial.h
yet-another-raytracer/math/: angles.h  base_matrix.hpp  base_matrix3x3_transfrom.hpp  base_matrix4x4.hpp  base_matrix4x4_transfrom.hpp  base_matrix_functions.hpp  base_matrix_operations.hpp  bounding_box.hpp  bounding_box_hit.hpp  helper.hpp  random.hpp  random_sample.hpp  ray.hpp  ray_functions.hpp  sse_float_vector3.hpp  sse_float_vector4_operations.hpp  vector.hpp  vector3_functions.hpp  vector3_operations.hpp  vector_functions.hpp  vector_operations.hpp
yet-another-raytracer/objects/: FlatTriangleObject.cpp  FlatTriangleObject.h  GeometryObject.h  SphereObject.cpp  SphereObject.h  TransformableGeometryObject.h
yet-another-raytracer/participating_media/: AtmosphericMedium.h  DynamicCompositeMedium.h  HenyeyGreensteinPhaseFunction.h  HomogeneousMedium.h  ParticipatingMedium.h  PerlinCloudsMedium.h  PhaseFunction.h  RayleighPhaseFunction.h  SphericalPhaseFunction.h  SunAwareHenyeyGreensteinPhaseFunction.h  SunAwareRayleighPhaseFunction.h  VoidMedium.h  media_common.h
yet-another-raytracer/renderers/: BucketRenderer.h  IRenderer.h  SingleThreadedScanlineRenderer.h
